--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,8 @@ input{
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
-    cursor: pointer;
+	cursor: pointer;
+	border-radius: 12px;
 }
 
 .button2 {
@@ -149,8 +150,9 @@ input{
 	font-size: 20px;
 	font-family: times new roman;
 	padding: 20px;
-	margin: 3px;
+	margin: 10px;
 	background: black;
+	border-radius: 5px;
 }
 
 #centro{
@@ -187,5 +189,10 @@ input{
     height: 130px;
     background-color: black ;
     /*border: 3px solid #7B241C;*/
+}
+
+#textoFooter{
+	color: white;
+	text-align: center;
 }
 
